WIP: lexer-scan-token

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "codecrafters-interpreter"
+name = "codecrafters_interpreter"
 version = "0.1.0"
 authors = ["Codecrafters <hello@codecrafters.io>"]
 edition = "2021"
@@ -8,4 +8,6 @@ rust-version = "1.80"
 [dependencies]
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
+clap = { version = "4.5.4", features = ["derive"] } # command line argument parsing
+miette = { version = "7.5.0", features = ["fancy"] }
 thiserror = "1.0.38"                             # error handling
